--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -25,4 +25,4 @@ jobs:
           git config --global user.email 'github-actions@github.com' 
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git commit -am "PEP-8 reformatting"
-          git push
+          git push --force
