--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,6 +6,8 @@ name: Python application
 on:
   push:
     branches: [ "main" ]
+    branches: [ "dev" ]
+    branches: [ "unit-testing" ]
   pull_request:
     branches: [ "main" ]
 
