--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,8 +5,9 @@ name: Python application
 
 on:
   push:
-    branches: [ "main" ]
-    branches: [ "dev" ]
+    branches: 
+      - main
+      - dev
   pull_request:
     branches: [ "main" ]
 
