--- a/sarla/implant/src/Makefile
+++ b/sarla/implant/src/Makefile
@@ -1,2 +1,2 @@
 make: implant.c
-	x86_64-w64-mingw32-gcc implant.c -o /mnt/hgfs/Sarla/implant.exe -lwininet -lcrypt32
+	x86_64-w64-mingw32-gcc implant.c -o /mnt/hgfs/Sarla-C2/implant.exe -lwininet -lcrypt32
