--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sarla"
-version = "0.1.0"
+version = "1.0.0-alpha.0"
 description = ""
 authors = ["Real-Cryillic <cunningham.dom@outlook.com>"]
 
@@ -8,6 +8,8 @@ authors = ["Real-Cryillic <cunningham.dom@outlook.com>"]
 python = "^3.10"
 click = "^8.1.3"
 termcolor = "^2.1.1"
+prompt-toolkit = "^3.0.36"
+rich = "^12.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
