--- a/sarla/implant/src/Makefile
+++ b/sarla/implant/src/Makefile
@@ -1,2 +1,2 @@
 make: wurm.c
-	x86_64-w64-mingw32-gcc -s wurm.c -o implant.exe -lwininet -lcrypt32 -Wall -Werror -pedantic
+	x86_64-w64-mingw32-gcc -s wurm_http.c log.c -o implant.exe -lwininet -lcrypt32 -Wall -Werror -pedantic
