--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 python = "^3.10"
 flask = "^2.2.3"
 pymongo = "^4.3.3"
+rich = "^13.3.3"
+click = "^8.1.3"
+termcolor = "^2.2.0"
+prompt-toolkit = "^3.0.38"
 
 
 [build-system]
