--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ click = "^8.1.3"
 termcolor = "^2.2.0"
 prompt-toolkit = "^3.0.38"
 requests = "^2.28.2"
+terminaltables = "^3.1.10"
 
 
 [build-system]
