Get local address from adapter info

--- a/sarla/src/agent/Makefile
+++ b/sarla/src/agent/Makefile
@@ -1,2 +1,2 @@
 make: wurm.c
-	x86_64-w64-mingw32-gcc -s wurm.c log.c -o /mnt/hgfs/Sarla/implant.exe -lwininet -lcrypt32 -Wall -Werror -pedantic
+	x86_64-w64-mingw32-gcc -s wurm.c log.c -o /mnt/hgfs/Sarla/implant.exe -lwininet -lcrypt32 -liphlpapi -Wall -Werror -pedantic
